[package]
name = "hft-ledger-cli"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Rust scoring CLI for HFT latency risk evidence."

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
